wrote most the javascript. - still needs a win condition and game reset condition

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 
         <div class = "score">
 
-            <h2 class = "playerScore">player score: 0</h2>
+            <h2 class = "playerScore" id= "playerScore">player score: 0</h2>
             
-            <h2 class = "computerScore">computer score: 0</h2>
+            <h2 class = "computerScore" id="computerScore">computer score: 0</h2>
         </div>
 
         <div class = "choiceDisplay">
 
-            <img src="../rockPaperSci/img/question.png" alt="playerChoice" width="120px" height="150px"> 
-            <h2 class = "winStatus"></h2>
+            <img id="playerImage" src="../rockPaperSci/img/question.png" alt="playerChoice" width="200px" height="150px"> 
+            <h2 class = "winStatus" id= "winStatus"> </h2>
 
-            <img src="../rockPaperSci/img/question.png" alt="playerChoice" width="120px" height="150px"> 
+            <img id = "computerImage" src="../rockPaperSci/img/question.png" alt="computerChoice" width="200px" height="150px"> 
 
         
         </div>
@@ -39,21 +39,21 @@
 
         <div class = "playerChoices">
 
-            <div class="card">
-                <img src="../rockPaperSci/img/rock.jpeg" alt="Rock" width="200px" height="150px"> 
+            <div class="card" id= "rock">
+                <img src="../rockPaperSci/img/rock.jpg" alt="Rock" width="200px" height="150px"> 
                 <div class="container">
                   <p class="cardText" >The Rock</p>
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="paper">
                 <img src="../rockPaperSci/img/paper.jpg" alt="Paper" width="200px" height="150px"> 
                 <div class="container">
                   <p class="cardText">The Roll</p>
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" id="scissors">
                 <img src="../rockPaperSci/img/scissors.jpg" alt="Scissors" width="200px" height="150px"> 
                 <div class="container">
                   <p class="cardText">The Scissors</p>
