added win condition and game reset button/logic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class = "header">
-        <h1>Rock, Paper, Scissors</h1>
+        <h1>Rock    Paper    Scissors</h1>
 
     </div>
 
@@ -22,13 +22,18 @@
 
             <h2 class = "playerScore" id= "playerScore">player score: 0</h2>
             
-            <h2 class = "computerScore" id="computerScore">computer score: 0</h2>
+            <h2 class = "computerScore" id="computerScore">Computer score: 0</h2>
         </div>
 
         <div class = "choiceDisplay">
 
             <img id="playerImage" src="../rockPaperSci/img/question.png" alt="playerChoice" width="200px" height="150px"> 
-            <h2 class = "winStatus" id= "winStatus"> </h2>
+            <div class ="winStatusDiv">
+                <h2 class = "winStatus" id= "winStatus"> </h2>
+                <button class="button" id="restartButton">Play Again?</button>
+
+            </div>
+            
 
             <img id = "computerImage" src="../rockPaperSci/img/question.png" alt="computerChoice" width="200px" height="150px"> 
 
